Made vars final and replaced explicit type by var Injected clock and random